# enterprise-doc-assistant

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  errors.py  health.py  middleware.py  ratelimit.py
app/api/v1/: chat.py  documents.py  router.py  schemas.py
app/core/: config.py  container.py  exceptions.py  logging.py  security.py
app/db/: models.py  repositories.py  session.py
app/models/: chat.py  document.py
app/rag/: pipeline.py
app/rag/chunking/: base.py  factory.py  recursive.py
app/rag/embeddings/: base.py  factory.py  fake.py  openai.py  sentence_transformers.py
app/rag/llm/: base.py  factory.py  fake.py  ollama_provider.py  openai_provider.py
app/rag/loaders/: base.py  docx.py  html.py  markdown.py  pdf.py  registry.py  text.py
app/rag/vectorstore/: base.py  chroma.py
app/services/: chat.py  documents.py  hybrid.py  ingestion.py  reranker.py  retrieval.py
docker/: Dockerfile
docs/: architecture.md
sample_data/: eval_set.json  it_support_faq.html  security_policy.md
scripts/: evaluate.py  generate_sample_pdf.py  ingest_samples.py
static/: index.html
tests/: conftest.py
tests/api/: test_auth.py  test_chat_api.py  test_documents_api.py  test_health.py  test_ratelimit.py
tests/integration/: test_ingestion_flow.py  test_vectorstore.py
tests/unit/: test_chunking.py  test_embeddings.py  test_llm.py  test_loaders.py  test_pipeline.py  test_rerank_hybrid.py  test_retrieval.py
